# halogen

./: .gitignore  .travis.yml  Cargo.toml  README.md  log4rs.yaml
src/: lib.rs  main.rs
src/assets/shaders/: default.frag  default.vert  default.vert.spv  frag.spv  vert.spv
src/audio/: mod.rs
src/gfx/: cmd.rs  cmd_buffer.rs  cmd_pool.rs  debug.rs  device.rs  encoder.rs  framebuffer.rs  init.rs  instance.rs  material.rs  mod.rs  pass.rs  pipeline.rs  queue.rs  renderable.rs  renderer.rs  swapchain.rs  sync.rs  system.rs  util.rs
src/gfx/platform/: mod.rs  win32.rs
src/graphics/: buffer.rs  cmd.rs  debug.rs  device.rs  framebuffer.rs  instance.rs  material.rs  mesh.rs  mod.rs  pass.rs  pipeline.rs  queue.rs  reflect.rs  renderer.rs  swapchain.rs  util.rs
src/graphics/platform/: linux.rs  win32.rs
src/render/: material.rs  mod.rs  system.rs  world.rs
src/rhi/: cmd.rs  debug.rs  device.rs  framebuffer.rs  instance.rs  mod.rs  pass.rs  pipeline.rs  queue.rs  renderer.rs  swapchain.rs  util.rs
src/rhi/platform/: linux.rs  mod.rs  win32.rs
src/shaders/: default.frag  default.frag.spv  default.vert
src/triangle/: example_base.rs  main.rs
src/util/: mod.rs
