[package]
name = "halogen"
version = "0.1.0"
authors = ["Ben Brown <bbrown683@live.com>"]
description = "WIP game engine over gfx-hal"
edition = "2018"

[dependencies]
alto = "3.0.3"
clap = "2.32.0"
directories = "1.0.2"
flate2 = "1.0.4"
gfx-hal = { git = "https://github.com/bbrown683/gfx", branch = "swapchain_cleanup" }
gfx-backend-dx12 = { git = "https://github.com/bbrown683/gfx", branch = "swapchain_cleanup" }
gfx-backend-vulkan = { git = "https://github.com/bbrown683/gfx", branch = "swapchain_cleanup" }
gltf = "0.11.2"
image = "0.20.0"
imgui = "0.0.21"
lewton = "0.9.3"
log = "0.4.6"
log4rs = "0.8.1"
nalgebra = "0.16.5"
ncollide3d = "0.17.1"
nphysics3d = "0.9.2"
num_cpus = "1.8.0"
rayon = "1.0.3"
rspirv = "0.5.4"
rusttype = "0.7.2"
specs = "0.14.0"
spirv_headers = "1.3.4"
tokio = "0.1.11"
toml = "0.4.8"
winit = "0.17.2"