[package]
name = "halogen"
version = "0.1.0"
authors = ["Ben Brown <bbrown683@live.com>"]
description = "WIP game engine"
edition = "2018"

[dependencies]
alto = "3.0.3"
ash = "0.26.0"
lewton = "0.9.3"
log = "0.4.6"
log4rs = "0.8.1"
nalgebra = "0.16.10"
num_cpus = "1.8.0"
rayon = "1.0.3"
spirv-reflect = "0.1.6"
winit = "0.17.2"