[package]
name = "halogen"
version = "0.1.0"
authors = ["Ben Brown <bbrown683@live.com>"]
description = "WIP game engine"
edition = "2018"

[dependencies]
alto = "3.0.4"
ash = "0.31.0"
lewton = "0.10.1"
log = "0.4.11"
log4rs = "0.13.0"
nalgebra = "0.22.0"
num_cpus = "1.13.0"
rayon = "1.4.1"
winit = "0.23.0"